--- a/samples/express-sample/views/index.pug
+++ b/samples/express-sample/views/index.pug
@@ -2,10 +2,14 @@ extends layout
 
 block content
   h1(class="text-3xl font-bold")= title
+  h2(class="text-3xl font-bold")=  googleId
+  h3(class="text-xl") Light Auth Secret: #{process.env.LIGHT_AUTH_SECRET_VALUE}
+  div= test
+
   p
     | This is an example site to demonstrate how to use #{ ' ' }
-    a(href="https://expressjs.com/", class="mb-2 font-medium underline") Express
+    a(href="https://expressjs.com/" class="mb-2 font-medium underline") Express
     | #{ ' ' } with #{ ' ' }
-    a(href="https://authjs.dev/reference/express", class="underline") Express Auth
+    a(href="https://authjs.dev/reference/express" class="underline") Express Auth
     |
     | for authentication.
