--- a/samples/astro-sample/src/layouts/main.astro
+++ b/samples/astro-sample/src/layouts/main.astro
@@ -1,8 +1,6 @@
 ---
 import "../styles/global.css";
 const { title } = Astro.props;
-
-
 ---
 
 <html lang="en">
@@ -13,7 +11,7 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
   <body>
-    <main class="min-h-screen flex flex-col items-center justify-center p-4">
+    <main>
       <slot />
     </main>
   </body>
