--- a/samples/astro-sample/src/pages/index.astro
+++ b/samples/astro-sample/src/pages/index.astro
@@ -7,6 +7,10 @@ import { getSession } from "@/lib/auth";
 import LogoutButton from "@/components/LogoutButton.astro";
 import { getUser } from "@/lib/auth";
 
+import Google from "../../public/google.svg";
+import { Button } from "@/components/ui/button";
+import { LogIn } from "lucide-react";
+
 export const prerender = false;
 
 const session = await getSession(Astro.request);
@@ -19,7 +23,12 @@ const user = await getUser(Astro.request);
 
     <div class="bg-white shadow-md rounded-lg p-6 border border-gray-200">
       <h2 class="text-xl font-semibold mb-4">Login Status</h2>
-
+      <div class="flex flex-col gap-2 my-6 w-80 place-self-center">
+        <Button id="btnRefresh" variant="outline">
+          <LogIn />
+          Refresh Session
+        </Button>
+      </div>
       {
         session != null ? (
           <div class="space-y-4">
@@ -54,3 +63,15 @@ const user = await getUser(Astro.request);
     </div>
   </div>
 </Layout>
+
+<script>
+  import { getSession } from "@/lib/auth";
+  const btnRefresh = document.getElementById("btnRefresh");
+
+  if (btnRefresh) {
+    btnRefresh.onclick = async () => {
+      const session = await getSession();
+      console.log("Session:", session);
+    };
+  }
+</script>
