--- a/samples/astro-sample/src/components/LoginButtons.astro
+++ b/samples/astro-sample/src/components/LoginButtons.astro
@@ -3,15 +3,15 @@ import { Button, buttonVariants } from "./ui/button";
 import Google from "../../public/google.svg";
 ---
 
-<div class="flex flex-col gap-2 w-80">
+<div class="flex flex-col gap-2 w-100">
   <Button id="btnLogin" variant="outline">
     <Google height={20} width={20} class="mr-2" />
-    Google
+    Google from client component
   </Button>
 </div>
 
 <script>
-  import { signIn } from "@/lib/auth";
+  import { signIn } from "@/lib/auth-client";
   const btnLogin = document.getElementById("btnLogin");
 
   if (btnLogin) {
