--- a/samples/express-sample/views/login.pug
+++ b/samples/express-sample/views/login.pug
@@ -26,6 +26,23 @@ block content
                             path(d="M1 1h22v22H1z" fill="none")
                         span Google
 
+            .mb-6
+                button(data-slot="button" 
+                    id="btnLogin"
+                    class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&amp;_svg]:pointer-events-none [&amp;_svg:not([class*='size-'])]:size-4 shrink-0 [&amp;_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 w-full" 
+                    type="submit")
+                    svg(class="mr-2 h-4 w-4" viewBox="0 0 24 24")
+                        path(d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z",
+                            fill="#4285F4")
+                        path(d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.57-2.77c-.98.66-2.23 1.06-3.71 1.06-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z", 
+                            fill="#34A853")
+                        path(d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l2.85-2.22.81-.62z" ,
+                            fill="#FBBC05")
+                        path(d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.7 1 3.99 3.47 2.18 7.07l3.66 2.84c.87-2.6 3.3-4.53 6.16-4.53z" ,
+                        fill="#EA4335")
+                        path(d="M1 1h22v22H1z" fill="none")
+                    span Google Client Side                       
+
             form(action="/login" method="POST")
                 .mb-6 
                     input(type="hidden" name="providerName" value="microsoft")
@@ -42,3 +59,5 @@ block content
 
             .mt-4.text-center
                 a(class="text-blue-500 hover:underline" href="/") Back to Home
+
+    script(src='js/index.js' type="module")
