Implement rate limiting functionality in light-auth-core and providers; Add IP address utilities for client identification.

--- a/samples/express-sample/views/index.pug
+++ b/samples/express-sample/views/index.pug
@@ -3,14 +3,12 @@ extends layout
 block content
   h1(class="text-3xl font-bold")= title
 
-  p
-    | This is an example site to demonstrate how to use #{ ' ' }
-    a(href="https://expressjs.com/" class="mb-2 font-medium underline") Express
-    | #{ ' ' } with #{ ' ' }
-    a(href="https://authjs.dev/reference/express" class="underline") Express Auth
-    |
-    | for authentication.
-
+  .mb-6
+      button(data-slot="button" 
+          id="btnRefreshSession"
+          class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&amp;_svg]:pointer-events-none [&amp;_svg:not([class*='size-'])]:size-4 shrink-0 [&amp;_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 w-full" 
+          type="button")
+          span Refresh Session (see console)
     
 
 
