--- a/samples/express-sample/views/layout.pug
+++ b/samples/express-sample/views/layout.pug
@@ -2,7 +2,7 @@ doctype html
 html
   head
     title= title
-    link(rel="stylesheet" href="/css/output.css")
+    link(rel="stylesheet" href="/css/output.css" type="text/css")
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
   body(class="flex flex-col items-center")
     div(class="flex w-[90%] max-w-2xl flex-col justify-start gap-2")
@@ -38,3 +38,5 @@ html
             a(href="/api/protected") Protected (API)
 
       block content
+      
+  script(src='js/index.js' type="module")
