--- a/samples/astro-sample/src/pages/index.astro
+++ b/samples/astro-sample/src/pages/index.astro
@@ -18,7 +18,7 @@ const user = await getUser(Astro);
 // result of the action to perform a POST login
 const result = Astro.getActionResult(actions.login);
 if (result && !result.error && result.data) {
-  return await signIn(result.data.providerName, result.data.callbackUrl, Astro);
+  return await signIn(Astro, result.data.providerName, result.data.callbackUrl);
 }
 ---
 
